@@ -1,5 +1,5 @@
 /*
- * testcode/replay.c - store and use a replay of events for the DNS resolver.
+ * testcode/fake_event.h - fake event handling that replays existing scenario.
  *
  * Copyright (c) 2007, NLnet Labs. All rights reserved.
  * 
@@ -35,19 +35,29 @@
 
 /**
  * \file
- * Store and use a replay of events for the DNS resolver.
- * Used to test known scenarios to get known outcomes.
+ * Event service that replays a scenario.
+ * This implements the same exported symbols as the files:
+ * util/netevent.c
+ * services/listen_dnsport.c
+ * services/outside_network.c
+ * But these do not actually access the network or events, instead
+ * the scenario is played.
  */
 
-#include "config.h"
-#include "testcode/replay.h"
-struct replay_scenario* 
-replay_scenario_read(FILE* in)
-{
-	return NULL;
-}
+#ifndef TESTCODE_FAKE_EVENT_H
+#define TESTCODE_FAKE_EVENT_H
+struct replay_scenario;
 
-void 
-replay_scenario_delete(struct replay_scenario* scen)
-{
-}
+/**
+ * Initialise fake event services.
+ *
+ * @param scen: Set the scenario to use for upcoming event handling.
+ */
+void fake_event_init(struct replay_scenario* scen);
+
+/**
+ * Deinit fake event services.
+ */
+void fake_event_cleanup();
+
+#endif /* TESTCODE_FAKE_EVENT_H */
