@@ -1,6 +1,7 @@
 8 February 2007: Wouter
 	- added tcp test.
 	- replay storage.
+	- testcode/fake_event work.
 
 7 February 2007: Wouter
 	- return answer with the same ID as query was sent with.
